import "VipGiftConfig.proto";
import "CommonGiftConfig.proto";
import "RewardConfig.proto";

package EquipmentConfig;

message Born
{
	required uint32 type	= 1;
	required uint32 val		= 2;
}

message Equip
{
	required uint32 eqid 		= 1;
	required uint32 type		= 2;
	required uint32 postion		= 3;
	repeated Born   born		= 4;	
	required uint32 star 		= 5;
	required uint32 character 	= 6;
	required uint32 limitnum	= 7;
	required uint32 price		= 8;
}

message SPProperty
{
	required uint32 ch		= 1;
	repeated uint32 value	= 2;
}

message EquipExp
{
	required uint32 eqid	= 1;
	required uint32 exp		= 2;
}

//普通礼包
//配置的物品按配置数量都发给玩家
message NormalGiftBag
{
	required uint32 				eqid	= 1;
	repeated RewardConfig.Reward	gifts	= 2;
}

message LuckGiftBagItem
{
	optional VipGiftConfig.EquipReward	 equips 	= 1; //装备奖励
	optional CommonGiftConfig.BaseReward base  		= 2; //基本奖励
	optional uint32						 hero		= 3; //英雄
	optional RewardConfig.Component		 component	= 4; //部件
	required uint32						 prob		= 5; //概率
}

//幸运礼包
message LuckGiftBag
{
	required uint32 				eqid	= 1; //装备id
	required uint32					numbers	= 2; //奖励的物品数
	repeated LuckGiftBagItem		gifts	= 3; //	
}

//限时道具
message TimeLimitProp
{
	required uint32 				eqid			= 1; //装备id
	required uint32					attribute		= 2; //效果
	required uint32					valid_peroid 	= 3;
	required uint32					value			= 4; //加成效果
}

message EquipList
{
	repeated Equip 			equips 		= 1;
	required uint32 		chmax		= 2;
	repeated SPProperty  	spProp		= 3;	
	repeated EquipExp 		equipexp	= 4;
	repeated NormalGiftBag	normal_giftbag 	= 5; //普通礼包
	repeated LuckGiftBag 	luck_giftbag	= 6; //幸运礼包
	repeated TimeLimitProp	time_limit_prop = 7; //限时道具
}


